// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddZoneScreen AddSectionScreen with invalid section count 1`] = `
<KeyboardAvoidingView
  behavior="height"
  enabled={true}
  keyboardVerticalOffset={110}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "stretch",
        "flex": 0.9,
        "justifyContent": "flex-start",
        "marginTop": 5,
      }
    }
  >
    <FlatList
      data={
        Array [
          Object {
            "name": 1,
            "sectionCount": 100,
          },
        ]
      }
      disableVirtualization={false}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onEndReachedThreshold={2}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      updateCellsBatchingPeriod={50}
      windowSize={21}
    />
  </View>
  <View
    style={
      Object {
        "flex": 0.1,
        "marginBottom": 15,
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={true}
      height={45}
      onPress={[Function]}
      radius={5}
      style={
        Object {
          "margin": 15,
        }
      }
      title="[missing \\"en.GENERICS.CONTINUE\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
</KeyboardAvoidingView>
`;

exports[`AddZoneScreen AddSectionScreen with valid input from add aisle 1`] = `
<KeyboardAvoidingView
  behavior="height"
  enabled={true}
  keyboardVerticalOffset={110}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "stretch",
        "flex": 0.9,
        "justifyContent": "flex-start",
        "marginTop": 5,
      }
    }
  >
    <FlatList
      data={
        Array [
          Object {
            "name": 1,
            "sectionCount": 1,
          },
          Object {
            "name": 2,
            "sectionCount": 1,
          },
          Object {
            "name": 3,
            "sectionCount": 1,
          },
        ]
      }
      disableVirtualization={false}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onEndReachedThreshold={2}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      updateCellsBatchingPeriod={50}
      windowSize={21}
    />
  </View>
  <View
    style={
      Object {
        "flex": 0.1,
        "marginBottom": 15,
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={false}
      height={45}
      onPress={[Function]}
      radius={5}
      style={
        Object {
          "margin": 15,
        }
      }
      title="[missing \\"en.GENERICS.CONTINUE\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
</KeyboardAvoidingView>
`;

exports[`AddZoneScreen AddSectionScreen with valid input from add section 1`] = `
<KeyboardAvoidingView
  behavior="height"
  enabled={true}
  keyboardVerticalOffset={110}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "stretch",
        "flex": 0.9,
        "justifyContent": "flex-start",
        "marginTop": 5,
      }
    }
  >
    <FlatList
      data={
        Array [
          Object {
            "name": "1",
            "sectionCount": 4,
          },
        ]
      }
      disableVirtualization={false}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onEndReachedThreshold={2}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      updateCellsBatchingPeriod={50}
      windowSize={21}
    />
  </View>
  <View
    style={
      Object {
        "flex": 0.1,
        "marginBottom": 15,
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={false}
      height={45}
      onPress={[Function]}
      radius={5}
      style={
        Object {
          "margin": 15,
        }
      }
      title="[missing \\"en.GENERICS.CONTINUE\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
</KeyboardAvoidingView>
`;

exports[`AddZoneScreen AddSectionScreen with valid input from add zone 1`] = `
<KeyboardAvoidingView
  behavior="height"
  enabled={true}
  keyboardVerticalOffset={110}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "stretch",
        "flex": 0.9,
        "justifyContent": "flex-start",
        "marginTop": 5,
      }
    }
  >
    <FlatList
      data={
        Array [
          Object {
            "name": 1,
            "sectionCount": 1,
          },
          Object {
            "name": 2,
            "sectionCount": 1,
          },
          Object {
            "name": 3,
            "sectionCount": 1,
          },
        ]
      }
      disableVirtualization={false}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onEndReachedThreshold={2}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      updateCellsBatchingPeriod={50}
      windowSize={21}
    />
  </View>
  <View
    style={
      Object {
        "flex": 0.1,
        "marginBottom": 15,
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={false}
      height={45}
      onPress={[Function]}
      radius={5}
      style={
        Object {
          "margin": 15,
        }
      }
      title="[missing \\"en.GENERICS.CONTINUE\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
</KeyboardAvoidingView>
`;
